[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deploy-pkg"
version = "0.1.0"
description = "Versioned deployment packager with S3 storage, CycloneDX SBOM, SHA-256 verification, and rollback"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "cyclonedx-python-lib>=11.0",
]

[project.scripts]
deploy-pkg = "deploy_pkg.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "moto[s3]>=5.0", "pytest-mock>=3.14"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
